--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,19 @@
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-ga4": "^2.1.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^5.3.0",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run generate-sitemap",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-sitemap": "node src/sitemap-generator.js"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5001"
 }
