--- a/package.json
+++ b/package.json
@@ -1,23 +1,10 @@
 {
   "name": "watt-events-website",
   "version": "1.0.0",
-  "description": "Casino rentals website for Bakersfield",
-  "main": "server.js",
-  "engines": {
-    "node": "18.x",
-    "npm": "9.x"
-  },
+  "private": true,
   "scripts": {
-    "start": "node server.js",
-    "build": "cd client && npm install && npm run build",
     "dev": "cd client && npm start",
-    "heroku-postbuild": "npm run build"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "path": "^0.12.7"
-  },
-  "keywords": ["casino", "rentals", "bakersfield", "events"],
-  "author": "Watt Events",
-  "license": "ISC"
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install"
+  }
 }
