--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,21 @@
 {
   "version": 2,
   "name": "watt-events",
-  "buildCommand": "cd client && npm ci && npm run build",
+  "buildCommand": "cd client && npm run build",
   "outputDirectory": "client/build",
   "installCommand": "cd client && npm ci",
-  "framework": null,
+  "framework": "create-react-app",
   "routes": [
     {
       "src": "/static/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
-      }
+      },
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/images/(.*)",
+      "dest": "/images/$1"
     },
     {
       "src": "/(.*)",
