--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,15 @@ node_modules
 /node_modules
 /.pnp
 .pnp.js
+client/node_modules
 
 # testing
 /coverage
+client/coverage
 
 # production
 /build
+client/build
 
 # misc
 .DS_Store
@@ -19,7 +22,15 @@ node_modules
 .env.test.local
 .env.production.local
 .env
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+client/.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
