--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "name": "watt-events",
-  "buildCommand": "npm run build",
+  "buildCommand": "cd client && npm run build",
   "outputDirectory": "client/build",
-  "installCommand": "npm run install",
+  "installCommand": "cd client && npm ci",
   "framework": "create-react-app",
   "routes": [
     {
